--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  
+
   devcontainer:
     container_name: info-5940-devcontainer
     build:
@@ -9,8 +9,8 @@ services:
     environment:
       AWS_PROFILE: aaii
       AZURE_OPENAI_API_KEY: <API_KEY>
-      AZURE_OPENAI_ENDPOINT: <ENDPOINT>
-      AZURE_OPENAI_MODEL_DEPLOYMENT: gpt-4
+      AZURE_OPENAI_ENDPOINT: <AZURE_OPENAI_ENDPOINT>
+      AZURE_OPENAI_MODEL_DEPLOYMENT: gpt-4o
       OPENAI_API_KEY: <API_KEY>
     volumes:
       - '$HOME/.aws:/root/.aws'
